unix/lang/tests/error/error_within_short_if.yab
#expect# Currently the wrong line is displayed
if (2>1) this does not compute
